--- a/cat hotel/index.html
+++ b/cat hotel/index.html
@@ -102,7 +102,44 @@
     </section>
     <!-- end of skills-->
 
+    <!--products-->
+    <section class="p-5">
+        <div class="container-fluid">
+            <!--title-->
+            <div class="row">
+                <div class="col text-center mb-3">
+                    <h1 class="text-warning display-2">About</h1>
+                    <p class="lead text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium corporis aliquid impedit.</p>
+                </div>
+            </div>
+            <!--end of title-->
+            <div class="row">
+                <div class="col-lg-3 col-sm-6">
+                    <img src="images/food.jpg" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Cats food</h2>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, sit.</p>
+                </div>
+                <div class="col-lg-3 col-sm-6 mt-3">
+                    <img src="images/toys.jpg" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Cats toys</h2>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, sit.</p>
+                </div>
+                <div class="col-lg-3 col-sm-6 mt-4">
+                    <img src="images/grooming.jpg" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Cats grooming</h2>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, sit.</p>
+                </div>
+                <div class="col-lg-3 col-sm-6 mt-5">
+                    <img src="images/house.jpg" class="img-thumbnail">
+                    <h2 class="my-3 text-warning">Cats House</h2>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, sit.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
+
+    <!--end of products-->
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
