--- a/cat hotel/index.html
+++ b/cat hotel/index.html
@@ -108,7 +108,7 @@
             <!--title-->
             <div class="row">
                 <div class="col text-center mb-3">
-                    <h1 class="text-warning display-2">About</h1>
+                    <h1 class="text-warning display-2">Products</h1>
                     <p class="lead text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium corporis aliquid impedit.</p>
                 </div>
             </div>
