added breed section
added breed section

--- a/cat hotel/index.html
+++ b/cat hotel/index.html
@@ -141,6 +141,50 @@
 
     <!--end of products-->
 
+    <!--breeds-->
+<section class="p-5">
+    <div class="container-fluid">
+        <!--title-->
+        <div class="row">
+        <div class="col text-center mb-3">
+        <h1 class="text-warning display-2">breeds</h1>
+        <p class="lead text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium corporis aliquid impedit.</p>
+        </div>
+        </div>
+        <!--end of title-->
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-sm-10 text-secondary">
+                <h2 id="Persian">Persian cats</h2>
+                <div class="progress bg-secondary mb-3">
+                    <div class="progress-bar" style="width:50%">
+                        50%
+                    </div>
+                </div>
+                <h2 id="Persian">Siamese cats</h2>
+                <div class="progress bg-secondary mb-3">
+                    <div class="progress-bar bg-danger" style="width:23%">
+                        23%
+                    </div>
+                </div>
+                <h2 id="Persian">Abyssinian cats</h2>
+                <div class="progress bg-secondary mb-3">
+                    <div class="progress-bar bg-warning" style="width:13%">
+                        13%
+                    </div>
+                </div>
+                <h2 id="Persian">Other cats</h2>
+                <div class="progress bg-secondary mb-3">
+                    <div class="progress-bar bg-success" style="width:14%">
+                        14%
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--end of breeds-->
+    
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
