--- a/cat hotel/index.html
+++ b/cat hotel/index.html
@@ -185,7 +185,45 @@
 
 <!--end of breeds-->
     
+<!--contact-->
 
+    <div class="p-5 bg-light">
+        <div class="container-fluid">
+        <!--title-->
+        <div class="row">
+            <div class="col text-center mb-3">
+            <h1 class="text-warning display-2">Contact</h1>
+            <p class="lead text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium corporis aliquid impedit.</p>
+            </div>
+        </div>
+        <!--end of title-->
+        <div class="row justify-content-center">
+            <div class="col-lg-6 col-md-8 col-sm-10">
+                <div class="text-center text-secondary">
+                    <h2>Got Question?</h2>
+                    <p>Stay Connected</p>
+                </div>
+                <form class="text-muted">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="text" class="form-control" id="name">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea class="form-control" id="message" rows="3"></textarea>                    
+                    </div>
+                    <button class="btn btn-outline-warning btn-block" type="submit">Submit Question</button>
+                </form>
+            </div>
+        </div>
+        </div>
+    </div>
+<!--end of contact-->
+    
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
