--- a/cat hotel/index.html
+++ b/cat hotel/index.html
@@ -224,6 +224,26 @@
     </div>
 <!--end of contact-->
     
+    <!--footer-->
+<footer class="bg-secondary">
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <h1 class="text-white font-weight-light text-capitalize p-3">Cats Hotel Site</h1>
+                <h3 class="text-light font-weight-light font-italic mb-3">Lorem ipsum dolor sit amet.</h3>
+                <div class="py-2">
+                    <a href="#"><i class="fab fa-facebook fa-2x text-primary mx-3"></i></a>
+                    <a href="#"><i class="fab fa-google-plus fa-2x text-danger mx-3"></i></a>
+                    <a href="#"><i class="fab fa-twitter fa-2x text-info mx-3"></i></a>
+                    <a href="#"><i class="fab fa-youtube fa-2x text-danger mx-3"></i></a>
+                </div>
+                <p class="text-light mb-0 mx-0">&copy;Copyright 2019 - Made by VStrog</p>
+            </div>
+        </div>
+    </div>
+</footer>
+<!--end of footer-->
+    
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
